<resources>
    <string name="app_name">Corpapel</string>
    <string name="facebook_app_id">1780148508901827</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enviando_peticion">Enviando petición..</string>
    <string name="internet_error">Lo sentimos, usted no tiene conexión a internet.</string>
    <string name="ingresar_todos_datos">Se requiere de todos los datos</string>
    <string name="buscar_tienda">Buscar Tienda</string>
    <string name="x_ubicacion_gps">Por Ubicación (GPS)</string>
    <string name="x_tipo">Por Tipo de Servicio</string>
    <string name="registro_ok">Usuario registrado satisfactoriamente</string>
    <string name="aceptar">Aceptar</string>
    <string name="registro_error">Ocurrió un error al momento de registrar usuario</string>
    <string name="cerrar_sesion">¿ Está seguro de cerrar sesión ?</string>
    <string name="cancelar">Cancelar</string>
    <string name="permiso_correo_error">Se requiere autorizar correo</string>
    <string name="conexion_error">Ocurrió un error de conexión, vuelva a intentarlo</string>
    <string name="cargando">Cargando...</string>
    <string name="actualizando">Actualizando...</string>
    <string name="confirm_edit">¿ Está seguro de los datos ingresados ?</string>
    <string name="completar_campos">Complete los campos para atender su consulta o sugerencia</string>
    <string name="nombre_apellidos">Nombre y Apellido</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="sugerencia">Sugerencia</string>
    <string name="consulta">Consulta</string>
    <string name="sugerencia_enviada">Sugerencia Enviada</string>


    <string-array name="DEPARTAMENTO_array">
        <item>DEPARTAMENTO</item>
        <item>AMAZONAS</item>
        <item>ANCASH</item>
        <item>APURIMAC</item>
        <item>AREQUIPA</item>
        <item>AYACUCHO</item>
        <item>CAJAMARCA</item>
        <item>CALLAO</item>
        <item>CUSCO</item>
        <item>HUANCAVELICA</item>
        <item>HUANUCO</item>
        <item>ICA</item>
        <item>JUNIN</item>
        <item>LA LIBERTAD</item>
        <item>LAMBAYEQUE</item>
        <item>LIMA</item>
        <item>LORETO</item>
        <item>MADRE DE DIOS</item>
        <item>MOQUEHUA</item>
        <item>PASCO</item>
        <item>PIURA</item>
        <item>PUNO</item>
        <item>SAN MARTIN</item>
        <item>TACNA</item>
        <item>TUMBES</item>
        <item>UCAYALI</item>
    </string-array>


    <string-array name="PROVINCIA_array">
        <item>PROVINCIA</item>
        <item>BARRANCA</item>
        <item>CAJATAMBO</item>
        <item>CANTA</item>
        <item>CAÑETE</item>
        <item>HUARAL</item>
        <item>HUAROCHIRI</item>
        <item>HUAURA</item>
        <item>LIMA</item>
        <item>OYON</item>
        <item>YUAYOS</item>
    </string-array>

    <string-array name="DISTRITO_array">
        <item>DISTRITO</item>
    </string-array>

    <string-array name="BARRANCA_array">
        <item>DISTRITO</item>
        <item>BARRANCA</item>
        <item>PARAMONGA</item>
        <item>PATIVILCA</item>
        <item>SUPE</item>
        <item>SUPE PUERTO</item>
    </string-array>

    <string-array name="CAJATAMBO_array">
        <item>DISTRITO</item>
        <item>MANÁS</item>
        <item>GORGOR</item>
        <item>HUANCAPÓN</item>
        <item>CAJATAMBO</item>
        <item>COPA</item>
    </string-array>

    <string-array name="CANTA_array">
        <item>DISTRITO</item>
        <item>CANTA</item>
        <item>ARAHUAY</item>
        <item>HUAMANTANGA</item>
        <item>HUAROS</item>
        <item>LACHAQUI</item>
        <item>SAN BUENAVENTURA</item>
        <item>SANTA ROSA DE QUIVES</item>
    </string-array>


    <string-array name="CAÑETE_array">
        <item>ASIA</item>
        <item>CALANGO</item>
        <item>CERRO AZUL</item>
        <item>CHILCA</item>
        <item>COAYLLO</item>
        <item>IMPERIAL</item>
        <item>LUNAHUANA</item>
        <item>MALA</item>
        <item>NUEVO IMPERIAL</item>
        <item>PACARAN</item>
        <item>QUILMANA</item>
        <item>SAN ANTONIO</item>
        <item>SAN LUIS</item>
        <item>SAN VICENTE DE CAÑETE</item>
        <item>SANTA CRUZ DE FLOREZ</item>
        <item>ZUÑIGA</item>
    </string-array>


    <string-array name="HUARAL_array">
        <item>DISTRITO</item>
        <item>27 DE NOVIEMBRE</item>
        <item>ATAVILLOS ALTO</item>
        <item>ATAVILLOS BAJO</item>
        <item>AUCALLAMA</item>
        <item>CHANCAY</item>
        <item>HUARAL</item>
        <item>IHUARÍ</item>
        <item>LAMPÍAN</item>
        <item>PACARAOS</item>
        <item>SANTA CRUZ</item>
        <item>SUMBILCA</item>
        <item>SAN MIGUEL DE ACOS</item>
    </string-array>

    <string-array name="HUAROCHIRI_array">
        <item>DISTRITO</item>
        <item>MATUCANA</item>
        <item>ANTIOQUÍA</item>
        <item>CALLAHUANCA</item>
        <item>CARAMPOMA</item>
        <item>CHICLA</item>
        <item>CUENCA</item>
        <item>HUACHUPAMPA</item>
        <item>HUANZA</item>
        <item>HUAROCHIRI</item>
        <item>LAHUAYTAMBO</item>
        <item>LANGA</item>
        <item>MARATANA</item>
        <item>RICARDO PALMA</item>
        <item>SAN ANDRES</item>
        <item>SAN JUAN</item>
        <item>SAN MATEO</item>
        <item>SANTA CRUZ</item>
    </string-array>


    <string-array name="HUAURA_array">
        <item>DISTRITO</item>
        <item>HUACHO</item>
        <item>ÁMBAR</item>
        <item>CHECRAS</item>
        <item>HUALMAY</item>
        <item>HUAURA</item>
        <item>LEONCIO PRADO</item>
        <item>PACCHO</item>
        <item>SANTA LEONOR</item>
        <item>SANTA MARÍA</item>
        <item>SAYÁN</item>
        <item>VEGUETA</item>
    </string-array>

    <string-array name="LIMA_array">
        <item>DISTRITO</item>
        <item>LIMA</item>
        <item>ANCÓN</item>
        <item>ATE</item>
        <item>BARRANCO</item>
        <item>BREÑA</item>
        <item>CARABAYLLO</item>
        <item>CHACLACAYO</item>
        <item>CHORRILLOS</item>
        <item>CIENEGUILLA</item>
        <item>COMAS</item>
        <item>EL AGUSTINO</item>
        <item>INDEPENDENCIA</item>
        <item>JESÚS MARÍA</item>
        <item>LA MOLINA</item>
        <item>LA VICTORIA</item>
        <item>LINCE</item>
        <item>LOS OLIVOS</item>
        <item>LURIN</item>
        <item>PUEBLO LIBRE</item>
        <item>MIRAFLORES</item>
        <item>PACHACAMÁC</item>
        <item>PUCUSANA</item>
        <item>SAN BARTOLO</item>
        <item>SAN BORJA</item>
        <item>SAN ISIDRO</item>
        <item>SAN JUAN DE LURIGANCHO</item>
        <item>SAN JUAN DE MIRAFLORES</item>
        <item>SAN LUIS</item>
        <item>SAN MARTIN DE PORRES</item>
        <item>SAN MIGUEL</item>
        <item>SANTA ANITA</item>
        <item>SANTIAGO DE SURCO</item>
        <item>SURQUILLO</item>
        <item>VILLA EL SALVADOR</item>
        <item>VILLA MARIA DEL TRIUNFO</item>
    </string-array>

    <string-array name="OYON_array">
        <item>DISTRITO</item>
        <item>OYÓN</item>
        <item>ANDAJES</item>
        <item>CAUJUL</item>
        <item>COCHAMARCA</item>
        <item>NAVÁN</item>
        <item>PACHANGARA</item>
    </string-array>

    <string-array name="YUAYOS_array">
        <item>DISTRITO</item>
        <item>YUAYOS</item>
        <item>ALIS</item>
        <item>CACRA</item>
        <item>CARANIA</item>
        <item>CATAHUASI</item>
        <item>LINCHA</item>
    </string-array>

</resources>
