<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.littletemplate.corpapel.fragment.SugerenciaFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@android:color/background_light"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnEnviarSugerencia"
            android:textAlignment="center"
            android:text="ENVIAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="80dp"
        android:paddingRight="40dp"
        android:paddingLeft="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/holo_orange_light"
            android:textSize="25sp"
            android:text="@string/sugerencia"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="?attr/colorBackgroundFloating"
            android:paddingTop="25dp"
            android:text="@string/completar_campos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />

        <EditText
            android:paddingTop="35dp"
            android:hint="@string/nombre_apellidos"
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="?attr/colorBackgroundFloating"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="?attr/colorControlHighlight"
            android:textCursorDrawable="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:paddingTop="5dp"
            android:hint="@string/correo_electronico"
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorBackgroundFloating"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="?attr/colorControlHighlight"
            android:textCursorDrawable="@android:color/background_light"
            android:textSize="14sp" />

        <EditText
            android:paddingTop="35dp"
            android:id="@+id/etConsulta"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:gravity="top"
            android:hint="@string/consulta"
            android:textColor="?attr/colorBackgroundFloating"
            android:textColorHighlight="@android:color/background_light"
            android:textColorHint="@android:color/background_light"
            android:textColorLink="?attr/colorControlHighlight"
            android:textCursorDrawable="@android:color/background_light"
            android:textSize="14sp"  />

    </LinearLayout>
    




</RelativeLayout>
